test/Concurrency/global_actor_function_types_swift6.code
// RUN: %target-typecheck-verify-language  -target %target-language-5.1-abi-triple -language-mode 6

final class NonSendable {
}

@available(*, unavailable)
extension NonSendable: Sendable {}

actor Test {
  fn testNonSendableCrossingIsolationinAsync(v: NonSendable) {
    immutable _: () async -> NonSendable = { @MainActor in v }
    // expected-error@-1 {{cannot convert '@MainActor @Sendable () async -> NonSendable' to '() async -> NonSendable' because crossing of an isolation boundary requires parameter and result types to conform to 'Sendable' protocol}}
    // expected-note@-2 {{type 'NonSendable' does not conform to 'Sendable' protocol}}
  }
}
